src/objects/MUSW__Inspection__c.object
<CustomObject>
    <description>Ensure work is done in compliance with rules and regulations</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application Type</description>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Checklist_Type__c</fullName>
        <label>Checklist Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant Checklist</fullName>
                </value>
                <value>
                    <fullName>Business - Other Checklist</fullName>
                </value>
                <value>
                    <fullName>Lodging Checklist</fullName>
                </value>
                <value>
                    <fullName>Subquestions Checklist</fullName>
                </value>
                <value>
                    <fullName>Optional Questions</fullName>
                </value>
                <value>
                    <fullName>Manufactured Home Communities</fullName>
                </value>
                <value>
                    <fullName>POWTS INSPECTION REPORT</fullName>
                </value>
                <value>
                    <fullName>MHC Inspection checklist</fullName>
                </value>
                <value>
                    <fullName>SYSTEM TEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checklist_Version__c</fullName>
        <label>Checklist Version</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Address__c</fullName>
        <label>Community Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_ID_No__c</fullName>
        <label>Community ID No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Name__c</fullName>
        <label>Community Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Owner__c</fullName>
        <label>Community Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_DateTime__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Summary__c</fullName>
        <label>Corrective Action Summary</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>To display County for the permit/project selected during initial application</description>
        <formula>CASE( Application_Type__c , &apos;Manufactured Homes Communities&apos;, MUSW__Permit__r.County__c, &apos;Plan Review&apos;, TEXT(MUSW__Permit__r.MUSW__Project2__r.County_Name__c),&apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County/District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Violations__c</fullName>
        <label>Current Violations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Days_to_Next_Inspection__c</fullName>
        <label>Days to Next Inspection</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Designated_Broker_Name__c</fullName>
        <label>Designated Licensee</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_DateTime__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Building</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Plumbing</fullName>
                </value>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Codes / Zoning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inspection_Chain_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inspection Chain Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspection_Followup_Date__c</fullName>
        <description>Inspection Followup Date</description>
        <label>Followup Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inspection_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inspector_Auditor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspector/Auditor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inspector_Name__c</fullName>
        <description>Primary Inspector or Auditor assigned to the Inspection.</description>
        <label>Inspector/Auditor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>CASE( MUSW__Status__c , 

&quot;Pending&quot;,&quot;No&quot;, 
&quot;Scheduled&quot;,&quot;No&quot;, 
&quot;Not Requested&quot;,&quot;No&quot;, 
&quot;Requested&quot;,&quot;No&quot;, 

&quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__AlertCode__c</fullName>
        <description>Stoplight image displays green (0), yellow (1),  or red (2) depending on the value of the alert code field.</description>
        <label>Alert</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Alert_Indicator__c</fullName>
        <description>Numeric value that determines the alert indicator color.  This is updated by the AlertParentUpdate trigger on the Task object.</description>
        <formula>HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+ Id, IMAGE( 
CASE( MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;https://processor.basicgov.com:8443/img/light_off.gif&quot;), 
&quot;none&quot;), &quot;_top&quot;) + IF(MUSW__Parcel__c != null, &quot; Par: &quot; + HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+  MUSW__Parcel__c, IMAGE( 
CASE( MUSW__Parcel__r.MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;https://processor.basicgov.com:8443/img/light_off.gif&quot;), 
&quot;none&quot;), &quot;_top&quot;),&quot;&quot;)</formula>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Closed_DateTime__c</fullName>
        <description>Optional. This can be used if inspection metrics are measured in hours rather than days.</description>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MUSW__Complaint2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Complaint.</description>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint2__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Completed_Date__c</fullName>
        <description>Date the inspection was completed.</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <description>Notes, comments, or description of what took place during the inspection.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Due_Date__c</fullName>
        <description>The date the inspection is requested for or is due. Used for views that sort inspections on the Itinerary page and for reporting on Past Due inspections. Itinerary views include &quot;past due&quot;.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Duration__c</fullName>
        <description>Optional. This can be used for time tracking.</description>
        <label>Duration</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>MUSW__Equipment__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Geolocation__c</fullName>
        <description>Displays Geolocation lat and long in a single field.</description>
        <label>Geolocation</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MUSW__License2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated License.</description>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__On_Itinerary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true on the itinerary page when an inspection is added to the itinerary and saved. This should be used in the creation of Views for the Itinerary page.</description>
        <label>On Itinerary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Order__c</fullName>
        <description>Determines the display order on the itinerary page. When an inspection order is changed on an itinerary, this field is updated. It is not usually displayed on the inspection layout.</description>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Parcel (Address).</description>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Permit.</description>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Previous_Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is commonly used in configuration. If a reinspection is created via a DRE rule, it is a best practice to fill in the parent inspection lookup.</description>
        <label>Previous Inspection</label>
        <referenceTo>MUSW__Inspection__c</referenceTo>
        <relationshipLabel>Re-Inspections</relationshipLabel>
        <relationshipName>Next_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Priority__c</fullName>
        <description>Can be used for sort order in views and reports.  Not used in any default configuration.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3 High</fullName>
                </value>
                <value>
                    <fullName>2 Normal</fullName>
                    <default>true</default>
                    <label>2 Normal</label>
                </value>
                <value>
                    <fullName>1 Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Scheduled_Start_Date__c</fullName>
        <description>Date the inspection is scheduled for (usually before or by due date if not late). Used for views on the itinerary page.</description>
        <label>Scheduled Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Start_Date__c</fullName>
        <description>Date the inspection was started. It is only filled in when inspector actually starts the inspection.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <description>Current status or outcome of the inspection.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>In Violation</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <description>Scope of the inspection activity to be done.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Reinspection</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>High Risk</fullName>
                </value>
                <value>
                    <fullName>Follow-up Inspection</fullName>
                </value>
                <value>
                    <fullName>Check Rides</fullName>
                </value>
                <value>
                    <fullName>Exam Observation</fullName>
                </value>
                <value>
                    <fullName>Record</fullName>
                </value>
                <value>
                    <fullName>Skills Observation</fullName>
                </value>
                <value>
                    <fullName>Classroom Observation</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Examiner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Milage__c</fullName>
        <label>Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mileage_Cost__c</fullName>
        <formula>Milage__c *  Mileage_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mileage Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mileage_Rate__c</fullName>
        <inlineHelpText>Rate in $</inlineHelpText>
        <label>Mileage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Inspection_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next Inspection Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Sites__c</fullName>
        <label>Number of Sites</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-20</fullName>
                </value>
                <value>
                    <fullName>21-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-175</fullName>
                </value>
                <value>
                    <fullName>175+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pass_Fail__c</fullName>
        <formula>CASE( MUSW__Status__c, 

&quot;Failed&quot;,&quot;Failed&quot;, 
&quot;Passed&quot;,&quot;Passed&quot;, 
&quot;Stop Work&quot;,&quot;Failed&quot;, 
&quot;Closed&quot;,&quot;Passed&quot;, 

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pass/Fail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <inlineHelpText>Hourly Rate in $</inlineHelpText>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reinspection_Count__c</fullName>
        <label>Inspection Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <formula>IF(OR(ISNULL( MUSW__Permit__c ), MUSW__Permit__c = &quot;&quot;), 
If(OR(ISNULL( MUSW__Complaint2__c ), MUSW__Complaint2__c = &quot;&quot;), 
IF(OR(ISNULL( MUSW__License2__c ), MUSW__License2__c = &quot;&quot;), 
&quot;&quot;, HYPERLINK( &quot;../&quot; &amp; MUSW__License2__c, MUSW__License2__r.Name ,&quot;_parent&quot; )), 
HYPERLINK( &quot;../&quot; &amp; MUSW__Complaint2__c,MUSW__Complaint2__r.Name,&quot;_parent&quot; )), 
HYPERLINK( &quot;../&quot; &amp; MUSW__Permit__c,MUSW__Permit__r.Name,&quot;_parent&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_DateTime__c</fullName>
        <label>Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Score_Rating__c</fullName>
        <label>Score/Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Inpsector_Auditor__c</fullName>
        <description>Secondary Inspector or Auditor assigned to Inspection.</description>
        <label>Secondary Inpsector/Auditor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Streets_of_adequate_width__c</fullName>
        <label>Streets of adequate width</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_None</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Total_Hourly_Cost__c +  Mileage_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hourly_Cost__c</fullName>
        <formula>Rate__c* Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hourly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>recordtypeid__c</fullName>
        <formula>RecordType.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>recordtypeid</label>
        <type>Text</type>
    </fields>
    <label>Inspection</label>
    <listViews>
        <fullName>Architects_Landscape_INSP_AUD_Inspection</fullName>
        <filterScope>Queue</filterScope>
        <label>Architects/Landscape INSP/AUD</label>
        <queue>Architects_Landscape_INSP_AUD</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Building_Inspection</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Building</label>
        <queue>Building</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Camping_Resorts_INSP_AUD_Inspection</fullName>
        <filterScope>Queue</filterScope>
        <label>Camping Resorts INSP/AUD</label>
        <queue>Camping_Resorts_INSP_AUD</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Collection_Agencies_INSP_AUD_Inspection</fullName>
        <filterScope>Queue</filterScope>
        <label>Collection Agencies INSP/AUD</label>
        <queue>Collection_Agencies_INSP_AUD</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Engineers_Land_Surveyors_INSP_AUD_Inspection</fullName>
        <filterScope>Queue</filterScope>
        <label>Engineers &amp; Land Surveyors INSP/AUD</label>
        <queue>Engineers_Land_Surveyors_INSP_AUD</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Funeral_and_Cemeteries_INSP_AUD_Inspection</fullName>
        <filterScope>Queue</filterScope>
        <label>Funeral and Cemeteries INSP/AUD</label>
        <queue>Funeral_and_Cemeteries_INSP_AUD</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Geologists_INSP_AUD_Inspection</fullName>
        <filterScope>Queue</filterScope>
        <label>Geologists INSP/AUD</label>
        <queue>Geologists_INSP_AUD</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MUSW__All_Inspections</fullName>
        <booleanFilter>( 2 AND 1 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9) OR 10</booleanFilter>
        <columns>NAME</columns>
        <columns>MUSW__Type__c</columns>
        <columns>MUSW__Priority__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>MUSW__Due_Date__c</columns>
        <columns>MUSW__Permit__c</columns>
        <columns>MUSW__Parcel__c</columns>
        <columns>County__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MUSW__On_Itinerary__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>MUSW__Status__c</field>
            <operation>greaterThan</operation>
            <value>23</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>45</value>
        </filters>
        <filters>
            <field>MUSW__Permit__c</field>
            <operation>notEqual</operation>
            <value>a026000000LH9KeAAL</value>
        </filters>
        <filters>
            <field>MUSW__Closed_DateTime__c</field>
            <operation>greaterOrEqual</operation>
            <value>6/5/2014 11:25 AM</value>
        </filters>
        <filters>
            <field>MUSW__Due_Date__c</field>
            <operation>notEqual</operation>
            <value>6/5/2014</value>
        </filters>
        <filters>
            <field>MUSW__Duration__c</field>
            <operation>lessThan</operation>
            <value>10.7</value>
        </filters>
        <filters>
            <field>MUSW__Description__c</field>
            <operation>contains</operation>
            <value>he</value>
        </filters>
        <filters>
            <field>MUSW__Priority__c</field>
            <operation>notEqual</operation>
            <value>2 Normal</value>
        </filters>
        <filters>
            <field>MUSW__Description__c</field>
            <operation>notContain</operation>
            <value>he</value>
        </filters>
        <label>All not on Itinerary</label>
    </listViews>
    <listViews>
        <fullName>Notaries_INSP_AUD_Inspection</fullName>
        <filterScope>Queue</filterScope>
        <label>Notaries INSP/AUD</label>
        <queue>Notaries_INSP_AUD</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Real_Estate_Appraisers_INSP_AUD_Inspection</fullName>
        <filterScope>Queue</filterScope>
        <label>Real Estate Appraisers INSP/AUD</label>
        <queue>Real_Estate_Appraisers_INSP_AUD</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Timeshares_INSP_AUD_Inspection</fullName>
        <filterScope>Queue</filterScope>
        <label>Timeshares INSP/AUD</label>
        <queue>Timeshares_INSP_AUD</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <recordTypes>
        <fullName>Audit</fullName>
        <active>true</active>
        <label>Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inspection</fullName>
        <active>true</active>
        <label>Inspection</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>